version/0.65/_sources/autoapi/pyedb/misc/siw_feature_config/xtalk_scan/pins/DriverPin.rst.txt






:class:`DriverPin`
==================


.. py:class:: pyedb.misc.siw_feature_config.xtalk_scan.pins.DriverPin

   
   Driver pin class handler.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: DriverPin

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~extend_xml`
            - Write  object to xml section.



   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~name`
            - 
          * - :py:attr:`~ref_des`
            - 
          * - :py:attr:`~driver_rise_time`
            - 
          * - :py:attr:`~voltage`
            - 
          * - :py:attr:`~driver_impedance`
            - 






Import detail
-------------

.. code-block:: python

    from pyedb.misc.siw_feature_config.xtalk_scan.pins import DriverPin


Attribute detail
----------------

.. py:attribute:: name
   :value: None


.. py:attribute:: ref_des
   :value: None


.. py:attribute:: driver_rise_time
   :value: None


.. py:attribute:: voltage
   :value: None


.. py:attribute:: driver_impedance
   :value: None




Method detail
-------------

.. py:method:: extend_xml(parent)

   
   Write  object to xml section.
















   ..
       !! processed by numpydoc !!




